# strmath

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
src/strmath/: __init__.py  enums.py  errors.py  evaluation.py  operators.py  tokenization.py  types.py
tests/: test_expressions.py
