[tool.poetry]
name = "strmath"
version = "1.0.1"
description = "A module for evaluating math expressions without eval()"
authors = ["Exenifix"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/Exenifix/strmath"
keywords = ["math", "parse", "str"]


[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
py-expression-eval = "^0.3.14"
tabulate = "^0.8.10"
exencolor = "^1.1.2"
mathparse = "^0.1.2"
InfixParser = "^3.1.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
